--- a/index.html
+++ b/index.html
@@ -12,9 +12,49 @@
       rel="stylesheet"
     />
     <!-- Font Awesome cdn -->
-    <script src="https://kit.fontawesome.com/e226994713.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/e226994713.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Tailwind CSS cdn -->
-     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Main Content -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+      <!-- Header Section -->
+      <header class="flex pt-10 mb-20">
+        <!--Text Content  -->
+        <div>
+          <h1 class="text-5xl md:text-7xl ">
+            It's good <br />
+            tea time at <br />
+            The Tea House
+          </h1>
+          <br>
+          <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+          <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore More<i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
+        </div>
+        <!-- Image Content -->
+        <div class="relative">
+            <!-- Image  -->
+             <div>
+                <img class="w-full" src="images/banner.png" alt="">
+             </div>
+             <!-- Card -->
+              <div class="flex items-center bg-white shadow-lg px-2 py2 md:px-10 lg:py-4 rounded-lg absolute top-28 md:top-80 md:left-32 lg:left-28">
+                <!-- icon -->
+                 <div>
+                    <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                 </div>
+                 <!-- Text -->
+                  <div class="ml-2">
+                    <h2 class="lg:text-2xl font-bold">5.00</h2>
+                    <p class="text-gray-500">Trust Pilot Ratings</p>
+                  </div>
+              </div>
+        </div>
+      </header>
+    </main>
+  </body>
 </html>
