--- a/index.html
+++ b/index.html
@@ -176,53 +176,176 @@
 
       <!-- Reviews Section -->
       <section class="mb-24">
-        <div class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16">
+        <div
+          class="bg-gradient-to-r from-orange-500 to-red-500 rounded-xl grid grid-cols-1 lg:grid-cols-2 text-white px-7 md:px-16"
+        >
           <!-- Text Section -->
-           <div class="flex justify-center items-center overflow-hidden">
+          <div class="flex justify-center items-center overflow-hidden">
             <div class="w-5/6">
-            <h1 class="text-5xl font-bold mb-5 mt-10">Meet Our Super Clients</h1>
-            <p class="mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-            <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">Show All</button>
-           </div>
-           </div>
-           <!-- Review Card Section -->
-            <div class="relative py-24">
-              <!-- Top Card -->
-               <div class="relative left-8 md:left-32 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-6 opacity-40">
-                <div class="absolute -top-5 -left-5 bg-white rounded-full">
-                  <img class="p-1" src="images/client.png" alt="">
-                </div>
-                <div>
-                  <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                  <h1 class="font-bold">Saiful Islam</h1>
-                  <small class="font-bold text-gray-500">Businessman</small>
-                </div>
-               </div>
-               <!-- Middle Card -->
-                <div class="absolute z-10 top-44 md:top-52 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-6">
-                <div class="absolute -top-5 -left-5 bg-white rounded-full">
-                  <img class="p-1" src="images/client.png" alt="">
-                </div>
-                <div>
-                  <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                  <h1 class="font-bold">Saiful Islam</h1>
-                  <small class="font-bold text-gray-500">Businessman</small>
-                </div>
-               </div>
-               <!-- Bottom Card -->
-                <div class="relative left-8 md:left-32 top-10 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-6 opacity-40">
-                <div class="absolute -top-5 -left-5 bg-white rounded-full">
-                  <img class="p-1" src="images/client.png" alt="">
-                </div>
-                <div>
-                  <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                  <h1 class="font-bold">Saiful Islam</h1>
-                  <small class="font-bold text-gray-500">Businessman</small>
-                </div>
-               </div>
+              <h1 class="text-5xl font-bold mb-5 mt-10">
+                Meet Our Super Clients
+              </h1>
+              <p class="mb-5">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
+              <button class="bg-white text-orange-700 px-3 py-2 rounded-lg">
+                Show All
+              </button>
             </div>
+          </div>
+          <!-- Review Card Section -->
+          <div class="relative py-24">
+            <!-- Top Card -->
+            <div
+              class="relative left-8 md:left-32 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-6 opacity-40"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h1 class="font-bold">Saiful Islam</h1>
+                <small class="font-bold text-gray-500">Businessman</small>
+              </div>
+            </div>
+            <!-- Middle Card -->
+            <div
+              class="absolute z-10 top-44 md:top-52 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-6"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h1 class="font-bold">Saiful Islam</h1>
+                <small class="font-bold text-gray-500">Businessman</small>
+              </div>
+            </div>
+            <!-- Bottom Card -->
+            <div
+              class="relative left-8 md:left-32 top-10 h-56 w-full md:w-3/4 bg-white text-black rounded-lg flex items-center px-6 opacity-40"
+            >
+              <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                <img class="p-1" src="images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="text-gray-500 mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <h1 class="font-bold">Saiful Islam</h1>
+                <small class="font-bold text-gray-500">Businessman</small>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
+    <!-- Footer Section -->
+    <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
+      <div class="w-9/12 mx-auto">
+        <!-- Logo -->
+        <div class="mb-8 flex justify-between">
+          <img class="mb-8" src="images/cup.png" alt="" />
+          <div class="flex items-center gap-6">
+            <h4>Ready to get started?</h4>
+            <button
+              class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+
+        <!-- Links -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+          <!-- First Column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Home</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">About</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+          <!-- Second Column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Our Services</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Life Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Car Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Health Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">House Insurance</a>
+              </li>
+            </ul>
+          </div>
+          <!-- Third Column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Help</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Help</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <!-- Fourth Column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">
+              Subscribe to our newsletter
+            </h3>
+            <div class="flex flex-col space-y-2">
+              <div>
+                <input
+                  placeholder="Email Address"
+                  type="text"
+                  class="bg-transparent border-b-2 border-black w-4/6 md:5/6"
+                />
+                <i
+                  class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 rounded-full text-white inline-flex justify-center items-center"
+                ></i>
+                <div class="flex justify-center w-2/5 mb-2 mt-8 gap-4">
+                  <i class="fa-brands fa-facebook-f"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-square-instagram"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center pt-4 mt-4">
+          <p class="text-sm text-gray-600">
+            © 2027 UIDesign.to - All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
